# cloud-regions-info

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CODEOWNERS  codeql.yml  dlint.yml  grype.yml  publish.yml  tests.yml
cloud_regions_info/: __init__.py
cloud_regions_info/mappings/: aws_regions.json  azure_regions.json
cloud_regions_info/providers/: __init__.py  aws.py  azure.py  base.py  gcp.py
tests/: test_alibaba.py  test_aws.py  test_azure.py  test_core.py  test_digitalocean.py  test_gcp.py  test_ibm.py  test_oci.py  test_onedrive.py  test_vultr.py
