[tool.poetry]
name = "cloud-regions-info"
version = "0.1.0"
description = "Python package for cloud region info"
authors = ["Ditikrushna Giri <ping@ditikrushna.xyz>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pydantic = "1.10.5"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
